# flickr-oauthtest

./: Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am  flickr-oauthtest.c
